<resources>
    <string name="login_timeout_for_password_change_message">提醒您：因已持續登入一段時間，需重新登入才能變更密碼</string>
    <string name="confirm1">確定</string>
    <string name="ok">OK</string>
    <string name="general_error">系統異常，請稍後再試</string>
    <string name="webview_load_timeout_message">連線異常，請稍後再試</string>
    <string name="no_browser">無瀏覽器可使用，請稍後再試</string>
    <string name="login_no_ticket">未取得登入許可</string>
    <string name="login_success">你已登入</string>
    <string name="main_provider_installer_error">Google Play服務不可用。</string>
    <string name="main_push_notification_setting_done">推播設定完成</string>
    <string name="main_health_connect_unavailable">您的裝置不支援Health Connect</string>
    <string name="main_health_connect_not_installed">您的裝置沒有安裝 Google Health Connect，無法使用相關功能</string>
    <string name="main_health_connect_not_installed_to_store">前往安裝</string>
    <string name="main_health_connect_permission_revoked">檢測到未開啟健康APP權限，無法讀取健康資訊，請至設定開啟健康權限</string>
    <string name="main_update_title">版本更新通知</string>
    <string name="main_force_update">噢.你的TeamWalk 不是最新版，動動手指趕快去更新吧！</string>
    <string name="main_recommend_update">噢.你的TeamWalk 不是最新版，動動手指趕快去更新吧！</string>
    <string name="main_force_update_confirm">立即更新</string>
    <string name="main_health_connect_permission_denied">Health Connect 權限被拒絕</string>
    <string name="main_health_connect_permission_rationale">Health Connect 需要權限才能運作</string>
    <string name="main_health_connect_dummy_insert_finished">Health Connect 假資料已經插入</string>
    <string name="main_health_connect_sleep_data" formatted="true">取得%d筆睡眠資料</string>
    <string name="main_health_connect_steps_data" formatted="true">取得%d筆步數資料</string>
    <string name="main_health_connect_total_calories_burned_data" formatted="true">取得%d筆總消耗卡洛里資料</string>
    <string name="main_health_connect_not_available">您的裝置不支援Health Connect</string>
    <string name="main_permission_rationale">需要權限才能夠執行部分功能</string>
    <string name="main_binding_same_device">您已綁定 %s </string>
    <string name="main_not_logged_in">尚未登入</string>
    <string name="main_simulate_clear_badge">清除小紅點</string>
    <string name="main_simulate_update_badge">更新未讀</string>
    <string name="main_simulate_add_notification">增加推播</string>
    <string name="main_simulate_logout">模擬登出</string>
    <string name="main_simulate_health_connect_fake_data">於Health Connect插入假資料</string>
    <string name="main_simulate_test_health_connect">測試HC</string>
    <string name="main_security_check" formatted="true">提醒您，%s，APP可能會有資訊外流的風險</string>
    <string name="main_security_check_overlay">偵測到其他應用程式顯示於本應用程式上方</string>
    <string name="main_security_check_developer">偵測到系統已開啟開發者模式</string>
    <string name="main_security_check_usb">偵測到 USB 偵錯已啟用</string>
    <string name="main_security_check_root">偵測到裝置可能已被(Root/Jailbreak/刷機)</string>
    <string name="main_security_check_no_secure">手機未設定密碼，有資安疑慮請設定密碼</string>
    <string name="main_security_check_reverse">偵測到系統可能存在逆向工程或注入工具</string>
    <string name="main_security_check_emulator">偵測到裝置可能為模擬器</string>
    <string name="main_security_force_close" formatted="true">提醒您，%s，APP可能會有資訊外流的風險，為確保您的帳戶安全，系統將自動結束程式。</string>
    <string name="webview_start_download">開始下載 - </string>
    <string name="webview_not_allowed_host">未授權的網域</string>
    <string name="camera_permission_rationale">需要相機權限才能夠執行部分功能</string>
    <string name="camera_permission_denied">相機權限被拒絕，無法使用部分功能</string>
    <string name="recognition_permission_rationale">需要感測器權限才能夠執行部分功能</string>
    <string name="recognition_permission_denied">感測器權限被拒絕，無法使用部分功能</string>
    <string name="notification_permission_rationale">需要推播權限才能夠執行部分功能</string>
    <string name="notification_permission_denied">推播權限被拒絕，無法使用部分功能</string>
    <string name="write_permission_rationale">需要儲存權限才能夠執行部分功能</string>
    <string name="write_permission_denied">儲存權限被拒絕，無法使用部分功能</string>
    <string name="read_permission_rationale">需要讀取權限才能夠執行部分功能</string>
    <string name="read_permission_denied">讀取權限被拒絕，無法使用部分功能</string>
    <string name="alert_root_message">提醒您，若在非一般環境(Root/Jailbreak/刷機)使用Teamwalk APP可能會有資訊外流的風險</string>
    <string name="alert_no_password_message">手機未設定密碼，有資安疑慮請設定密碼，謝謝"</string>
    <string name="alert_reverse_tool_message">提醒您，有逆向工具運行，APP可能會有資訊外流的風險"</string>
    <string name="alert_covered_message">提醒您，屏幕被覆蓋，APP可能會有資訊外流的風險"</string>
    <string name="understand_and_continue">我知道了</string>
    <string name="go_to_setting">前往設定</string>
    <string name="onboarding_connect_skip">暫時先不綁定，開始您的健康生活</string>
    <string name="onboarding_connect_next">開始您的健康生活</string>
    <string name="onboarding_connect_done">首次登入流程結束</string>
    <string name="pattern_setting_different">兩次圖形碼不相符，請重新再試</string>
    <string name="connect_health_connect">Health Connect</string>
    <string name="connect_google_fit">Google Fit</string>
    <string name="connect_fitbit">Fitbit</string>
    <string name="connect_garmin">Garmin</string>
    <string name="binding_change_device_title">解除綁定裝置</string>
    <string name="binding_change_device_message" formatted="true">1. 解除綁定後，歷史步數無法再同步更新\n2. 新裝置綁定完成後，系統會自綁定完成日起進行步數同步。\n\n提醒您解除綁定前，務必先完成資料同步！請問是否仍要解除 %s 的綁定？</string>
    <string name="binding_change_device_cancel">先不要</string>
    <string name="binding_change_device_confirm">解除綁定</string>
    <string name="binding_change_health_connect_title">解除Health Connect綁定</string>
    <string name="binding_change_health_connect_message">請確認是否要前往Health Connect 收回權限</string>
    <string name="binding_change_health_connect_confirm">是</string>
    <string name="binding_change_health_connect_cancel">否，解除綁定就好</string>
    <string name="binding_success_title">綁定成功</string>
    <string name="binding_success_body">設備綁定成功</string>
    <string name="notification_url_alert_title">請注意</string>
    <string name="notification_url_alert_message">您即將離開TeamWalk APP\n請確認是否執行？</string>
    <string name="notification_badge_title">新訊息</string>
    <string name="notification_badge_message" formatted="true">你有 %d 則未讀訊息</string>
    <string name="test">teamwalkdebug</string>
    <string name="app_slogan">健康保障，永不止步</string>
    <string name="login_method_password">帳號密碼</string>
    <string name="login_method_pattern">圖形</string>
    <string name="login_method_biometric">臉部</string>
    <string name="login_remember_me">記住我</string>
    <string name="login_password_pid">身分證字號或居留證號</string>
    <string name="login_password_pass">請輸入密碼</string>
    <string name="login_password_captcha">驗證碼</string>
    <string name="login_password_warning_pid">身份證字號格式錯誤</string>
    <string name="login_password_warning_password">密碼格式錯誤</string>
    <string name="login_password_warning_captcha">驗證碼錯誤</string>
    <string name="login_pattern_stealth_mode">隱藏圖形軌跡</string>
    <string name="login_pattern_normal_mode">顯示圖形軌跡</string>
    <string name="login_pattern_lt_six_dots">圖形少於6點</string>
    <string name="login_pattern_bt_dots">圖形多於16點</string>
    <string name="login_alert_user_unauthorized_title">你還沒被授權</string>
    <string name="login_alert_user_unauthorized_body">你的帳號還未被授權登入!</string>
    <string name="login_alert_user_not_found_title">你還不是TeamWalk會員哦</string>
    <string name="login_alert_user_not_found_body">動動手指，立即加入TeamWalk！</string>
    <string name="login_alert_pattern_not_set_title">你還沒設定圖形登入</string>
    <string name="login_alert_pattern_not_set_body">你還沒設定圖形登入,請使用帳號密碼登入後,至「我的」右上角設定啟用。</string>
    <string name="login_alert_pattern_over_year_title">圖形設定已超過一年</string>
    <string name="login_alert_pattern_over_year_body">圖形密碼超過一年未變更，請盡快變更</string>
    <string name="login">登入</string>
    <string name="login_fail">登入失敗</string>
    <string name="sign_up">建立新帳號</string>
    <string name="register_now">立即註冊</string>
    <string name="register_next">下次再說</string>
    <string name="forget_pass">忘記密碼</string>
    <string name="onboard_avatar_nickname">編輯你的頭像和暱稱, 暱稱上限中文最多4個字, 或英文最多8個字母</string>
    <string name="onboard_edit_nickname">編輯暱稱</string>
    <string name="onboard_edit_nickname_emoji">暱稱不能含有Emoji符號</string>
    <string name="onboard_height">你的身高?</string>
    <string name="onboard_height_text">這些資訊幫助我們提供更精準的健康評估</string>
    <string name="onboard_height_cm">公分</string>
    <string name="onboard_weight">你的體重?</string>
    <string name="onboard_weight_text">這些資訊幫助我們提供更精準的健康評估</string>
    <string name="onboard_weight_kg">公斤</string>
    <string name="onboard_interval">每週運動次數?</string>
    <string name="onboard_interval_text">這些資訊幫助我們提供更精準的健康評估</string>
    <string name="onboard_connect">選擇運動數據來源</string>
    <string name="onboard_connect_text">綁定任一裝置,將自動上傳運動數據!</string>
    <string name="onboard_connect_info"><![CDATA[1.若使用Fitbit或Garmin開始紀錄時沒有選擇跑步類型，將不會傳至系統內喔！<br />換而言之，我們只收入「跑步類型」，若您是選擇「步行」、「騎車」這種，將不收錄於App內。<br />2.為公平起見，若單次紀錄之速度與距離有以下任一情況，則該次紀錄將不同步於App內，並於隔天推播告知。<br />- 配速限制3:00~10:59(不可快於3分速，以及低於10分速）<br />- 距離少於1公里 (里程數太少不予以計算)<br />- 用戶GPS裝置無法取得起跑位置資料<br />- 室內跑不算數，例如跑步機、室內操場，請一起跑出戶外吧！]]></string>
    <string name="onboard_connect_message">為了更準確紀錄步數，TeamWalk可串接Apple health、Google fit、Garmin、Fibit等四種健康數據來源，只要選擇其中一種來源，即刻上傳步數資訊，讓阿龍陪你一起走路更健康!</string>
    <string name="onboard_connect_change_title">切換綁定裝置</string>
    <string name="onboard_connect_change_body">請確認是否要切換到</string>
    <string name="onboard_connect_success">連結成功</string>
    <string name="onboard_connect_fail">Garmin連結失敗</string>
    <string name="onboard_connect_remove_success">成功移除設備</string>
    <string name="onboard_promote">是否有好友推薦碼?</string>
    <string name="onboard_promote_text">輸入推薦你加入TeamWalk的用戶推薦碼,你和好友都會得到額外獎勵!\n(獎勵內容依活動網站公告為主)</string>
    <string name="onboard_promote_editText">輸入推薦碼(非必填)</string>
    <string name="onboard_promote_info"><![CDATA[<b>什麼是推薦碼？</b><br />每個TeamWalk成員都有一組推薦碼，將存放於會員管理頁面。]]></string>
    <string name="onboard_promote_next">開始你的健康生活!</string>
    <string name="onboard_promote_msg">推薦碼含有不合法內容或格式不正確</string>
    <string name="pattern_setup_title">設定圖形密碼</string>
    <string name="pattern_setup_body">須連接 6-14 個點，可重複</string>
    <string name="pattern_setup_confirm_title">確認圖形密碼</string>
    <string name="pattern_setup_confirm_body">請再次畫出圖形密碼</string>
    <string name="pattern_setup_original_title">原有圖形</string>
    <string name="pattern_setup_original_body">請畫出原有圖形以進行新圖形設定</string>
    <string name="pattern_setup_resp_401">未授權，請重新登入</string>
    <string name="pattern_setup_notice_title">提醒您</string>
    <string name="pattern_setup_notice_content">若登入後持續一段時間，可能需要重新登入後才能設定圖形密碼</string>
    <string name="next_step">下一步</string>
    <string name="cancel">取消</string>
    <string name="confirm2">確認</string>
    <string name="setup_fail">設定失敗</string>
    <string name="setup_fail_msg">請重新登入後再重新操作</string>
    <string name="change_success">設定圖形登入成功</string>
    <string name="change_success_text">為保護您的帳戶安全，提醒您下列情況圖形登入會驗證失敗，謝謝！\n1. 移除APP後重新下載\n2. 使用其他裝置登入同一組帳號</string>
    <string name="empty">未填寫</string>
    <string name="close">關閉</string>
    <string name="go_back">返回</string>
    <string name="webview_error_title" formatted="true">網路連線錯誤 (代碼: %s)</string>
    <string name="webview_error_message" formatted="true">載入失敗。\n%s</string>
    <string name="main_finish_login">你以登入</string>
    <string name="main_add_to_clipboard">複製到剪貼簿</string>
    <string name="main_can_not_open_file_chooser">無法打開相簿</string>
    <string name="main_is_not_online">請檢查網路連線!</string>
    <string name="access_connect_fail">連線失敗</string>
    <string name="access_data_fail">資料讀取錯誤，無法設定</string>
    <string name="security_msg">提醒您，請於您的設備安裝防毒軟體以保護系統及個資安全，點選確認後仍可持續使用TeamWalk APP。</string>
    <string name="loading_msg">連線中，請稍等片刻</string>
    <string name="onboarding_weight_msg">限輸入體重範圍30 ~ 250公斤，小數點後最多一位</string>
    <string name="onboarding_height_msg">限輸入身高範圍100 ~ 250公分，小數點後最多一位</string>
    <string name="shareapp_name_fb">FB</string>
    <string name="shareapp_pkgname_fb">com.facebook.katana</string>
    <string name="shareapp_classname_fb">com.facebook.composer.shareintent.ImplicitShareIntentHandlerDefaultAlias</string>
</resources>