<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <HorizontalScrollView
        android:id="@+id/test_container"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/clearBadge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_simulate_clear_badge"
                android:padding="8dp" />

            <TextView
                android:id="@+id/updateBadge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_simulate_update_badge"
                android:padding="8dp" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_simulate_logout"
                android:padding="8dp" />

            <TextView
                android:id="@+id/dummy_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginStart="4dp"
                android:text="@string/main_simulate_health_connect_fake_data"
                android:visibility="gone" />

        </LinearLayout>
    </HorizontalScrollView>

    <com.taiwanlife.teamwalk.ui.main.webview.MyWebView
        android:id="@+id/web_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/test_container" />

    <ProgressBar
        android:id="@+id/loading_indicator"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/base6"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/loading_msg"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loading_indicator" />

</androidx.constraintlayout.widget.ConstraintLayout>