<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:divider="@drawable/layout_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showDividers="middle|end">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/login_layout_password_pid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/login_editText_password_pid"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:ems="10"
                        android:maxLength="10"
                        android:hint="@string/login_password_pid"
                        android:inputType="text|textCapCharacters"
                        android:singleLine="true"
                        android:imeOptions="actionNext"/>

                    <CheckBox
                        android:id="@+id/login_checkBox_remember_me"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/login_remember_me"
                        android:textColor="#80908E"
                        android:buttonTint="#00d7c2"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:id="@+id/login_textView_warning_pid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/login_password_warning_pid"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorError"
                    android:visibility="gone" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/login_layout_password_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/login_editText_password"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ()[]{}&lt;&gt;+-*/?,.:;_\|~`!@#$%^&amp;="
                        android:ems="10"
                        android:maxLength="30"
                        android:hint="@string/login_password_pass"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:imeOptions="actionNext"/>

                    <TextView
                        android:id="@+id/login_forget_pass_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:gravity="center_vertical"
                        android:text="@string/forget_pass" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:id="@+id/login_textView_warning_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/login_password_warning_password"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorError"
                    android:visibility="gone" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/login_layout_password_captcha"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/login_editText_captcha"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="3"
                        android:background="@android:color/transparent"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:ems="10"
                        android:hint="@string/login_password_captcha"
                        android:inputType="text|textCapCharacters"
                        android:singleLine="true"
                        android:imeOptions="actionDone"/>


                    <Button
                        android:id="@+id/login_button_captcha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:paddingEnd="8dp"
                        android:background="@drawable/captcha_style"
                        android:drawableEnd="@drawable/reload" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:id="@+id/login_textView_warning_captcha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/login_password_warning_captcha"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorError"
                    android:visibility="gone" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_style"
            android:elevation="3dp"
            android:text="@string/login"
            android:textColor="@color/colorLinkText"
            app:layout_constraintBottom_toTopOf="@+id/login_signup_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />

        <TextView
            android:id="@+id/login_signup_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>