<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.PromoteActivity">

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/base2"
        android:paddingEnd="@dimen/base2"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/onboarding_skip_button"
        app:layout_constraintEnd_toStartOf="@+id/onboarding_skip_button"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/onboarding_skip_button">

        <ImageButton
            android:layout_width="@dimen/base4"
            android:layout_height="@dimen/base4"
            android:background="@android:color/transparent"
            android:contentDescription="@string/go_back"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/back"
            app:tint="@color/blue_onboarding_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_back"
            android:textSize="@dimen/text_17sp"
            android:textColor="@color/blue_onboarding_back" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/onboarding_skip_button"
        android:layout_width="@dimen/base6"
        android:layout_height="@dimen/base6"
        android:layout_marginStart="@dimen/base2"
        android:layout_marginTop="@dimen/base2"
        android:layout_marginEnd="@dimen/base2"
        android:background="@android:color/transparent"
        android:padding="@dimen/base1"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/close" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16pt"
        android:layout_marginTop="@dimen/base2"
        android:layout_marginEnd="16pt"
        android:progress="33"
        android:progressTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_skip_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16pt"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16pt"
        android:layout_marginBottom="16dp"
        android:text="@string/onboard_promote"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16pt"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16pt"
        android:text="@string/onboard_promote_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/onboarding_imageView_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="44dp"
        android:background="@android:color/transparent"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:srcCompat="@drawable/info_icon" />


    <EditText
        android:id="@+id/onboarding_editText_promote_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:ems="10"
        android:hint="@string/onboard_promote_editText"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLength="8"
        android:maxLines="1"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <Button
        android:id="@+id/onboarding_next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16pt"
        android:layout_marginEnd="16pt"
        android:layout_marginBottom="16pt"
        android:background="@drawable/button_style"
        android:elevation="3dp"
        android:text="@string/next_step"
        android:textColor="@color/colorLinkText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>