<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:divider="@drawable/layout_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showDividers="middle|end">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/login_layout_pattern_pid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/login_editText_pattern_pid"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:ems="10"
                        android:hint="@string/login_password_pid"
                        android:inputType="text|textCapCharacters" />

                    <CheckBox
                        android:id="@+id/login_checkBox_remember_me"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/login_remember_me"
                        android:textColor="#80908E"
                        android:buttonTint="#00d7c2" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:id="@+id/login_textView_warning_pid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/login_password_warning_pid"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorError"
                    android:visibility="gone" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.andrognito.patternlockview.PatternLockView
            android:id="@+id/login_pattern_lock_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:correctStateColor="#00d7c2"
            app:dotCount="4"
            app:dotNormalSize="16dp"
            app:dotSelectedSize="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2"
            app:normalStateColor="#d1d5db" />

        <Button
            android:id="@+id/login_pattern_toggle_stealth_mode_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/visibility"
            android:drawablePadding="8dp"
            android:text="@string/login_pattern_normal_mode"
            android:textColor="#405754"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_pattern_lock_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>